@@ -26,8 +26,8 @@ import org.apache.kafka.timeline.SnapshotRegistry;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.Timeout;
 
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -41,7 +41,7 @@ public class BrokersToIsrsTest {
     };
 
     private static Set<TopicIdPartition> toSet(TopicIdPartition... partitions) {
-        return new HashSet<>(Arrays.asList(partitions));
+        return new HashSet<>(List.of(partitions));
     }
 
     private static Set<TopicIdPartition> toSet(PartitionsOnReplicaIterator iterator) {
